generate dashboard component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,8 @@
         <li class="menu-item"><a href="javascript:;">Setting</a></li>
       </ul>
     </div>
-    <div class="col-lg-10 col-md-10"></div>
+    <div class="col-lg-10 col-md-10">
+
+    </div>
   </div>
 </div>
