--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       </ul>
     </div>
     <div class="col-lg-10 col-md-10">
-
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
