--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,16 @@
         <h1>Hima Admin</h1>
       </div>
       <ul class="menu">
-        <li class="menu-item"><a href="javascript:;">Dashboard</a></li>
-        <li class="menu-item"><a href="javascript:;">Users</a></li>
-        <li class="menu-item"><a href="javascript:;">Candidates</a></li>
+        <li class="menu-item"><a href="javascript:;" routerLink="dashboard">Dashboard</a></li>
+        <li class="menu-item"><a href="javascript:;" routerLink="user">Users</a></li>
+        <li class="menu-item"><a href="javascript:;" routerLink="candidate">Candidates</a></li>
         <li class="menu-item"><a href="javascript:;">Setting</a></li>
       </ul>
     </div>
     <div class="col-lg-10 col-md-10">
-      <router-outlet></router-outlet>
+      <div class="main">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
