--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <li class="menu-item"><a href="javascript:;" routerLink="dashboard">Dashboard</a></li>
         <li class="menu-item"><a href="javascript:;" routerLink="user">Users</a></li>
         <li class="menu-item"><a href="javascript:;" routerLink="candidate">Candidates</a></li>
-        <li class="menu-item"><a href="javascript:;">Setting</a></li>
+        <li class="menu-item"><a href="javascript:;">Result</a></li>
       </ul>
     </div>
     <div class="col-lg-10 col-md-10">
