change login card width size

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
   </div>
 
   <div style="width: 100%; margin-top: 100px; text-align: center;" *ngIf="loginPage">
-    <div class="card small" style=" margin:auto;">
+    <div class="card large" style=" margin:auto;">
       <h3 class="section">Login first</h3>
       <div class="button error" *ngIf="error">Invalid login!</div>
 
